--- a/config/crd/bases/redis.redis.opstreelabs.in_redis.yaml
+++ b/config/crd/bases/redis.redis.opstreelabs.in_redis.yaml
@@ -39,6 +39,8 @@ spec:
           spec:
             description: RedisSpec defines the desired state of Redis
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
@@ -4454,6 +4456,8 @@ spec:
           spec:
             description: RedisSpec defines the desired state of Redis
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
