--- a/config/crd/bases/redis.redis.opstreelabs.in_redissentinels.yaml
+++ b/config/crd/bases/redis.redis.opstreelabs.in_redissentinels.yaml
@@ -2067,6 +2067,8 @@ spec:
             type: object
           spec:
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
