--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -2,9 +2,15 @@ name: Build Docker Image for testing
 on:
   push:
     branches:
-      - standalone-hostport
-  workflow_dispatch:
+      - main
+    tags:
+      - "v*"
+  pull_request:
+    branches:
+      - main
 
+env:
+  REPOSITORY: falkordb/operator
 jobs:
   build_scan_container_image:
     runs-on: ubuntu-latest
@@ -20,11 +26,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-          
+
+      - name: Print ref name
+        run: echo ${{ github.ref }}
+        
       - name: Build multi-arch image
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/arm64,linux/amd64
           push: true
-          tags: falkordb/redis-operator-standalone:latest
+          tags: |
+            ${{ env.REPOSITORY }}:${{ github.ref}}
+            ${{ env.REPOSITORY }}:latest
