fix: Dynamically set chart version based on GITHUB_REF in publish-charts workflow

--- a/.github/workflows/publish-charts.yaml
+++ b/.github/workflows/publish-charts.yaml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Get chart version
         run: |
-          echo "chart_version=$(echo v1.1.1)" >> $GITHUB_ENV
+          echo "chart_version=$(echo ${GITHUB_REF##*/v})" >> $GITHUB_ENV
 
       - name: Install Helm
         uses: azure/setup-helm@v4
