fix: Update Redis chart versions to 0.1.0 and modify image references to falkordb

--- a/charts/cluster/templates/redis-cluster.yaml
+++ b/charts/cluster/templates/redis-cluster.yaml
@@ -9,6 +9,12 @@ metadata:
     redis.opstreelabs.in/recreate-statefulset: "true"
     {{ end }}
 spec:
+  {{-if .Values.redisCluster.terminationGracePeriodSeconds }}
+  terminationGracePeriodSeconds: {{ .Values.redisCluster.terminationGracePeriodSeconds }}
+  {{- end }}
+  {{- if .Values.redisCluster.hostPort }}
+  hostPort: {{ .Values.redisCluster.hostPort }}
+  {{- end }}
   clusterSize: {{ .Values.redisCluster.clusterSize }}
   persistenceEnabled: {{ .Values.redisCluster.persistenceEnabled }}
   clusterVersion: {{ .Values.redisCluster.clusterVersion }}
