--- a/charts/cluster/values.yaml
+++ b/charts/cluster/values.yaml
@@ -4,10 +4,12 @@ redisCluster:
   clusterSize: 3
   clusterVersion: v7
   persistenceEnabled: true
-  image: quay.io/opstree/redis
-  tag: v7.0.15
+  image: falkordb/redis
+  tag: "latest"
   imagePullPolicy: IfNotPresent
   imagePullSecrets: {}
+  terminationGracePeriodSeconds: null
+  hostPort: null
     # - name:  Secret with Registry credentials
   redisSecret:
     secretName: ""
