--- a/charts/sentinel/templates/redis-sentinel.yaml
+++ b/charts/sentinel/templates/redis-sentinel.yaml
@@ -9,6 +9,12 @@ metadata:
     redis.opstreelabs.in/recreate-statefulset: "true"
     {{ end }}
 spec:
+  {{- if .Values.redisSentinel.terminationGracePeriodSeconds }}
+  terminationGracePeriodSeconds: {{ .Values.redisSentinel.terminationGracePeriodSeconds }}
+  {{- end }}
+  {{- if .Values.redisSentinel.hostPort }}
+  hostPort: {{ .Values.redisSentinel.hostPort }}
+  {{- end }}
   clusterSize: {{ .Values.redisSentinel.clusterSize }}
   # Sentinel Config
   redisSentinelConfig:
