--- a/charts/standalone/templates/redis-standalone.yaml
+++ b/charts/standalone/templates/redis-standalone.yaml
@@ -9,6 +9,12 @@ metadata:
     redis.opstreelabs.in/recreate-statefulset: "true"
     {{ end }}
 spec:
+  {{- if .Values.redisStandalone.hostPort }}
+  hostPort: {{ .Values.redisStandalone.hostPort }}
+  {{- end }}
+  {{- if .Values.redisStandalone.terminationGracePeriodSeconds }}
+  terminationGracePeriodSeconds: {{ .Values.redisStandalone.terminationGracePeriodSeconds }}
+  {{- end }}
   kubernetesConfig:
     image: "{{ .Values.redisStandalone.image }}:{{ .Values.redisStandalone.tag }}"
     imagePullPolicy: "{{ .Values.redisStandalone.imagePullPolicy }}"
