--- a/charts/replication/Chart.yaml
+++ b/charts/replication/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: redis-replication
+name: replication
 description: Provides easy redis setup definitions for Kubernetes services, and deployment.
 version: 0.1.0
 appVersion: "0.16.7"
