fix: Update chart repository URL to use the correct GitHub Pages link

--- a/ct.yaml
+++ b/ct.yaml
@@ -4,4 +4,4 @@ target-branch: main
 chart-dirs:
   - charts
 chart-repos:
-  - falkordb-helm=https://falkordb/helm-charts
+  - falkordb-helm=https://falkordb.github.io/helm-charts
