--- a/clusterValues.yaml
+++ b/clusterValues.yaml
@@ -1,17 +1,19 @@
 ---
-redisStandalone:
-  name: ""
+redisCluster:
+  name: "falkordb-cluster"
+  clusterSize: 3
+  clusterVersion: v7
+  persistenceEnabled: true
   image: falkordb/redis
   tag: "latest"
   imagePullPolicy: IfNotPresent
-  imagePullSecrets: []
-  hostPort: null
+  imagePullSecrets: {}
   terminationGracePeriodSeconds: null
+  hostPort: null
     # - name:  Secret with Registry credentials
   redisSecret:
-    secretName: ""
-    secretKey: ""
-  serviceType: ClusterIP
+    secretName: "falkordb-pass"
+    secretKey: "password"
   resources: {}
     # requests:
     #   cpu: 100m
@@ -19,16 +21,63 @@ redisStandalone:
     # limits:
     #   cpu: 100m
     #   memory: 128Mi
-  ignoreAnnotations: []
-    # - "redis.opstreelabs.in/ignore"
   minReadySeconds: 0
   # -- Some fields of statefulset are immutable, such as volumeClaimTemplates.
   # When set to true, the operator will delete the statefulset and recreate it. Default is false.
   recreateStatefulSetOnUpdateInvalid: false
+  leader:
+    replicas: 3
+    serviceType: ClusterIP
+    affinity: {}
+      # nodeAffinity:
+      #   requiredDuringSchedulingIgnoredDuringExecution:
+      #     nodeSelectorTerms:
+      #     - matchExpressions:
+      #       - key: disktype
+      #         operator: In
+      #         values:
+      #         - ssd
+    tolerations: []
+      # - key: "key"
+      #   operator: "Equal"
+      #   value: "value"
+      #   effect: "NoSchedule"
+    nodeSelector: null
+      # memory: medium
+    securityContext: {}
+    pdb:
+      enabled: false
+      maxUnavailable: 1
+      minAvailable: 1
+  follower:
+    replicas: 3
+    serviceType: ClusterIP
+    affinity: null
+      # nodeAffinity:
+      #   requiredDuringSchedulingIgnoredDuringExecution:
+      #     nodeSelectorTerms:
+      #     - matchExpressions:
+      #       - key: disktype
+      #         operator: In
+      #         values:
+      #         - ssd
+    tolerations: []
+      # - key: "key"
+      #   operator: "Equal"
+      #   value: "value"
+      #   effect: "NoSchedule"
+    nodeSelector: null
+      # memory: medium
+    securityContext: {}
+    pdb:
+      enabled: false
+      maxUnavailable: 1
+      minAvailable: 1
 
 labels: {}
 #   foo: bar
 #   test: echo
+
 
 externalConfig:
   enabled: false
@@ -41,7 +90,7 @@ externalService:
   enabled: false
   # annotations:
   #   foo: bar
-  serviceType: NodePort
+  serviceType: LoadBalancer
   port: 6379
 
 serviceMonitor:
@@ -56,8 +105,8 @@ serviceMonitor:
 
 redisExporter:
   enabled: false
-  image: falkordb/redis_exporter
-  tag: "v1.68.0-alpine"
+  image: quay.io/opstree/redis-exporter
+  tag: "v1.44.0"
   imagePullPolicy: IfNotPresent
   resources: {}
     # requests:
@@ -70,6 +119,21 @@ redisExporter:
     # - name: VAR_NAME
     #   value: "value1"
   securityContext: {}
+
+sidecars:
+  name: ""
+  image: ""
+  imagePullPolicy: "IfNotPresent"
+  resources:
+    limits:
+      cpu: "100m"
+      memory: "128Mi"
+    requests:
+      cpu: "50m"
+      memory: "64Mi"
+  env: {}
+    # - name: MY_ENV_VAR
+    #   value: "my-env-var-value"
 
 initContainer:
   enabled: false
@@ -86,30 +150,19 @@ initContainer:
   command: []
   args: []
 
-sidecars:
-  name: ""
-  image: ""
-  imagePullPolicy: "IfNotPresent"
-  resources:
-    limits:
-      cpu: "100m"
-      memory: "128Mi"
-    requests:
-      cpu: "50m"
-      memory: "64Mi"
-  env: []
-    # - name: MY_ENV_VAR
-    #   value: "my-env-var-value"
-
 priorityClassName: ""
-
-nodeSelector: {}
-  # memory: medium
 
 storageSpec:
   volumeClaimTemplate:
     spec:
       # storageClassName: standard
+      accessModes: ["ReadWriteOnce"]
+      resources:
+        requests:
+          storage: 1Gi
+  nodeConfVolume: true
+  nodeConfVolumeClaimTemplate:
+    spec:
       accessModes: ["ReadWriteOnce"]
       resources:
         requests:
@@ -120,25 +173,8 @@ podSecurityContext:
   runAsUser: 1000
   fsGroup: 1000
 
-securityContext: {}
 
-affinity: {}
-  # nodeAffinity:
-  #   requiredDuringSchedulingIgnoredDuringExecution:
-  #     nodeSelectorTerms:
-  #     - matchExpressions:
-  #       - key: disktype
-  #         operator: In
-  #         values:
-  #         - ssd
-
-tolerations: []
-  # - key: "key"
-  #   operator: "Equal"
-  #   value: "value"
-  #   effect: "NoSchedule"
-
-serviceAccountName: ""
+# serviceAccountName: redis-sa
 
 TLS:
   ca: ca.key
@@ -154,3 +190,6 @@ acl:
 env: []
   # - name: VAR_NAME
   #   value: "value1"
+
+serviceAccountName: ""
+
