--- a/.github/workflows/build-docker-test-image.yaml
+++ b/.github/workflows/build-docker-test-image.yaml
@@ -7,6 +7,7 @@ on:
       tag:
         description: 'Tag for the image'
         required: true
+        default: 'latest'
 
 env:
   REPOSITORY: falkordb/operator
