--- a/.github/workflows/build-docker-test-image.yaml
+++ b/.github/workflows/build-docker-test-image.yaml
@@ -2,6 +2,9 @@ name: Build Docker Image for Operator testing
 on:
   pull_request:
     types: [opened, synchronize, ready_for_review]
+  push:
+    branches:
+      - dev
   workflow_dispatch:
     inputs:
       tag:
