chore: update Redis CRDs to include hostPort and terminationGracePeriodSeconds fields; bump chart version to 0.19.6

--- a/charts/operator/crds/redis.redis.opstreelabs.in_redis.yaml
+++ b/charts/operator/crds/redis.redis.opstreelabs.in_redis.yaml
@@ -39,6 +39,8 @@ spec:
           spec:
             description: RedisSpec defines the desired state of Redis
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
