--- a/charts/operator/crds/redis.redis.opstreelabs.in_redisclusters.yaml
+++ b/charts/operator/crds/redis.redis.opstreelabs.in_redisclusters.yaml
@@ -67,6 +67,10 @@ spec:
           spec:
             description: RedisClusterSpec defines the desired state of RedisCluster
             properties:
+              terminationGracePeriodSeconds:
+                type: integer
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
