--- a/charts/operator/crds/redis.redis.opstreelabs.in_redisreplications.yaml
+++ b/charts/operator/crds/redis.redis.opstreelabs.in_redisreplications.yaml
@@ -45,6 +45,8 @@ spec:
             type: object
           spec:
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
