--- a/charts/operator/crds/redis.redis.opstreelabs.in_redissentinels.yaml
+++ b/charts/operator/crds/redis.redis.opstreelabs.in_redissentinels.yaml
@@ -38,6 +38,8 @@ spec:
             type: object
           spec:
             properties:
+              hostPort:
+                type: integer
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
