chore: bump chart versions and update Redis exporter image tags

--- a/charts/replication/values.yaml
+++ b/charts/replication/values.yaml
@@ -61,7 +61,7 @@ serviceMonitor:
 redisExporter:
   enabled: false
   image: falkordb/redis_exporter
-  tag: "v1.68.0-alpine"
+  tag: "v1.68.0"
   imagePullPolicy: IfNotPresent
   resources: {}
     # requests:
