--- a/charts/sentinel/values.yaml
+++ b/charts/sentinel/values.yaml
@@ -2,8 +2,8 @@
 redisSentinel:
   name: ""
   clusterSize: 3
-  image: quay.io/opstree/redis-sentinel
-  tag: v7.0.15
+  image: falkordb/redis-sentinel
+  tag: "latest"
   imagePullPolicy: IfNotPresent
   imagePullSecrets: []
   hostPort: null
@@ -75,7 +75,7 @@ serviceMonitor:
 redisExporter:
   enabled: false
   image: falkordb/redis_exporter
-  tag: "v1.68.0-alpine"
+  tag: "v1.68.0"
   imagePullPolicy: IfNotPresent
   resources: {}
     # requests:
