chore: bump operator chart version to 0.19.7 and update image name

--- a/charts/operator/values.yaml
+++ b/charts/operator/values.yaml
@@ -1,7 +1,7 @@
 ---
 redisOperator:
   name: falkordb-operator
-  imageName: falkordb/operator
+  imageName: muhammadqadora/operator-test
   # Overrides the image tag whose default is the chart appVersion.
   imageTag: "latest"
   imagePullPolicy: Always
