feat: add enabled flag to TLS configuration for Redis instances

--- a/config/crd/bases/redis.redis.opstreelabs.in_redis.yaml
+++ b/config/crd/bases/redis.redis.opstreelabs.in_redis.yaml
@@ -44,6 +44,10 @@ spec:
               TLS:
                 description: TLS Configuration for redis instances
                 properties:
+                  enabled:
+                    description: Enable TLS for redis instances
+                    type: boolean
+                    default: false
                   ca:
                     type: string
                   cert:
